app/assets/stylesheets/components/_search_form.scss
.search-form {
  width: 150px;
  margin-left: 10px;
  margin-top: 6px;
  #query {
    width: 110px;
    font-size: 10px;
    }

  }






.search-button {
  background-color: transparent;
  border-color: transparent ;
  color: rgba(0, 0, 0, 0.5);
  font-size: 16px;


}

.icon-search{
  margin-top: 6px;
}





@include media-breakpoint-up(md) {


.search-form {
  width: 500px;
  margin-left: 15px;
  margin-top: 4px;
  #query{
    width: 250px;
    font-size: 15px;
    }

  }



.search-button {
  background-color: transparent;
  border-color: transparent ;
  color: rgba(0, 0, 0, 0.5);
  font-size: 20px;



}

.icon-search{
  margin-top: 8px;
}

}

